icon added, exchange page responsive, rm class menu, fix blog4 link and title

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,10 @@ header li {
     flex-direction: column;
   }
 
+  .exchange {
+    font-size: 13px;
+  }
+
   header h1 {
     text-align: center;
   }
